# newton

./: .gitignore  CMakeLists.txt
docs/: making_a_lib.md
include/: CMakeLists.txt  newton.h
include/newton/: matrix.h
tests/: CMakeLists.txt  test1.cpp
